# FH-STECE2022

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.rst  datalogger.cpp  demo.cpp  requirements.txt  rm-on-steroids.cpp
CMake/: FindSphinx.cmake
Documentation/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  development.rst  howto.rst  index.rst  queue.rst
Documentation/2024-10-08/: index.rst
Documentation/2024-10-23/: index.rst
Documentation/2024-10-29/: architecture.odg  index.rst
Documentation/2024-11-05/: index.rst
Documentation/2024-11-12/: index.rst
Documentation/architecture/: architecture.odg  index.rst
Documentation/development/: bno055.rst  btn9960lv.rst  build.rst  crazy-pi.rst  index.rst  initialization.rst  issues.rst  vl53l1x.rst
Documentation/development/architecture/: index.rst
Documentation/project/: display-ssd1305.rst  group.rst  gyroscope-bno055.rst  index.rst  motor-control-btn9960lv.rst  project  proximity-vl53l1x.rst  remote-control.rst  sensor-csv.rst  servo-motor.rst  sysfs-pwm.rst
Documentation/project/meetings/: index.rst
Documentation/project/queue/: display-waveshare.rst
Documentation/project/tasks/: commandline-driving.rst  crazy-car.rst  crazy-pi.rst  driving-stage-1.rst  group.rst  gyroscope-bno055.rst  hardware-init.rst  motor-control-btn9960lv.rst  proximity-vl53l1x.rst  remote-control.rst  sensor-mqtt.rst  servo-motor.rst  sysfs-gpio.rst  sysfs-pwm.rst
Documentation/toolcase/: gpio.rst  index.rst  motor.rst  os-abstractions.rst  proximity-bno055.rst  pwm.rst  sensor-bno055.rst  sensor-vl53l1x.rst  servo.rst
exercises/: CMakeLists.txt
exercises/01-copy/: CMakeLists.txt  cp-for-the-poor.c
exercises/02-sensor/lib/: CMakeLists.txt  sensor.c
exercises/02-sensor/tests/: CMakeLists.txt  fixture-sensor.h  fixture-tmpdir-cwd.cpp  fixture-tmpdir-cwd.h  fixture-tmpdir.cpp  suite-sensor.cpp
exercises/03-parse-passwd/lib/: CMakeLists.txt  parse-passwd.cpp
exercises/03-parse-passwd/tests/: CMakeLists.txt  suite-passwd-line.cpp  suite-passwd-user.cpp
exercises/04-vector-into-map/lib/: CMakeLists.txt  parse-passwd.cpp  parse-passwd.h  vector-into-map.cpp
exercises/04-vector-into-map/tests/: CMakeLists.txt  suite-2.cpp  suite-passwd-error.cpp  suite.cpp
exercises/05-sorting-and-searching/lib/: search-util.cpp  sort-util.cpp  sort-util.h  vector-into-map.cpp
exercises/05-sorting-and-searching/tests/: CMakeLists.txt  suite.cpp
gyroscope-bno055/: CMakeLists.txt  bno055_class.cpp  bno055_class.h  bno055_infmain.c  bno055_infmain.cpp  bno055_infmain_csv.cpp  getbno055.h
livecoding/: CMakeLists.txt  address-space.cpp  bug.c  datalogger.cpp  file-create.cpp  find-demo.cpp  find-if-demo-lambda.cpp  find-if-demo.cpp  map-demo.cpp  namemangling-lib-c.cpp  namemangling-lib-c.h  namemangling-lib.cpp  namemangling-lib.h  namemangling-main-c.cpp  namemangling-main.cpp  point.cpp  ptr-arith-stl.cpp  pwm.cpp  rm-on-steroids.cpp  sort-demo.cpp  string-demo.cpp  vector-demo.cpp  vector-demo2.cpp
livecoding/exercise-2024-04-22/Software/: CMakeLists.txt  greet-parameterized.c  greet-simple.c  greet.c  greet.h
livecoding/libraries/: hello.cpp  main
livecoding/sensor-oo-c/: CMakeLists.txt
livecoding/sensor-oo-c/lib/: CMakeLists.txt  sensor.c  sensor.cpp  sensor.h
livecoding/sensor-oo-c/tests/: CMakeLists.txt  fixture-tmpdir.cpp  fixture-tmpdir.h  suite-sensor.cpp
livecoding/toolchain-demo/: CMakeLists.txt  Makefile  hello-first.c  hello-flexible.c  hello-flexible.h
motor-control-btn9960lv/: CMakeLists.txt  motor-control-btn9960lv-prog_full_bridge.cpp  motor-control-btn9960lv-prog_test_1.cpp  motor-control-btn9960lv-prog_test_2.cpp
proximity-vl53l1x/: CMakeLists.txt  VL53L1X.cpp  VL53L1X.h  proximity-vl53l1x-prog.cpp
proximity-vl53l1x/proximity-vl53l1x/: CMakeLists.txt
servo-ppm/: CMakeLists.txt  servo-Test.cpp  servo-ppm-prog.cpp  servoTest_wiringPi.cpp
tests/: CMakeLists.txt  demo-tests.cpp  fixture-tmpdir.cpp  fixture-tmpdir.h  motor-tests.cpp  servo-tests.cpp  sysfs-file-tests.cpp  sysfs-gpio-pin-tests.cpp  sysfs-gpio-tests.cpp  sysfs-pwm-pin-tests.cpp  sysfs-servo-tests.cpp
toolcase/: CMakeLists.txt
toolcase/base/: CMakeLists.txt  bno055-class.cpp  bno055-class.h  bno055.h  bno055_class.cpp  bno055_class.h  millis.cpp  millis.h  pwm-pin.h  pwmpin-testprog.cpp  servo.cpp  servo.h  sysfs-file.cpp  sysfs-file.h  sysfs-gpio-pin.cpp  sysfs-gpio-pin.h  sysfs-gpio.cpp  sysfs-gpio.h  sysfs-motor.cpp  sysfs-motor.h  sysfs-pwm-pin.cpp  sysfs-pwm-pin.h  sysfs-servo.cpp  sysfs-servo.h  vl53l1x.cpp  vl53l1x.h
toolcase/ipc/: CMakeLists.txt  crazy-car-protocol.h  vehicle-protocol.h
toolchain-demo/: hello-second.c  hello.c  hello.h
(+27 files in other folders)
