add_executable(
  motor-control-btn9960lv-prog_test_1
  motor-control-btn9960lv-prog_test_1.cpp
)

add_executable(
  motor-control-btn9960lv-prog_test_2
  motor-control-btn9960lv-prog_test_2.cpp
)

add_executable(
  motor-control-btn9960lv-prog_full_bridge
  motor-control-btn9960lv-prog_full_bridge.cpp
)
